[package]
name = "keycloak-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust port of Keycloack"
homepage = ""
repository = "git@github.com:Revanthshalon/Keycloak-sdk.git"
readme = "README.md"

[[bin]]
name = "keycloak-sdk"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.217", features = ["derive"]}
